--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Design.NoActionBar">
-        <!--android:theme="@style/Theme.FindEvents">-->
+        <activity
+            android:name=".my_events"
+            android:exported="false" />
+        <!-- android:theme="@style/Theme.FindEvents"> -->
         <activity
             android:name=".RegisterUsers"
             android:exported="false" />
