--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.findevents">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,17 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Design.NoActionBar">
         <activity
-            android:name=".my_events"
-            android:exported="false" />
-        <!-- android:theme="@style/Theme.FindEvents"> -->
-        <activity
-            android:name=".RegisterUsers"
-            android:exported="false" />
-        <activity
-            android:name=".LoginUsers"
-            android:exported="false" />
-        <activity
-            android:name=".MainActivity"
+            android:name=".MainFriki"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -28,6 +21,22 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".my_events"
+            android:exported="false">
+
+        </activity> <!-- android:theme="@style/Theme.FindEvents"> -->
+        <activity
+            android:name=".RegisterUsers"
+            android:exported="false">
+        </activity>
+        <activity
+            android:name=".LoginUsers"
+            android:exported="false">
+        </activity>
+        <activity
+            android:name=".MainActivity"
+            android:exported="true" />
     </application>
 
 </manifest>
