--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Apr 29 15:27:13 COT 2022
-sdk.dir=C\:\\Users\\Sebastian Sasaki\\AppData\\Local\\Android\\Sdk
+#Tue May 03 15:03:05 COT 2022
+sdk.dir=C\:\\Users\\SERGIO\\AppData\\Local\\Android\\Sdk
